versions/26.1.2/translated/uk_ua/develop/loader/fabric-mod-json.md
---
title: fabric.mod.json
description: Дізнайтеся про особливості `fabric.mod.json`.
authors:
  - cassiancc
  - falseresync
  - jamieswhiteshirt
  - IMB11
  - SolidBlock-cn
authors-nogithub:
  - skyland1a
resources:
  https://github.com/FabricMC/fabric-loom/blob/dev/1.16/src/main/java/net/fabricmc/loom/api/fmj/FabricModJsonV1Spec.java: Початковий код особливостей fabric.mod.json v1
  https://github.com/FabricMC/fabric-language-kotlin: Постачальник мови від Fabric Language Kotlin
  https://spdx.org/licenses/: SPDX License Identifiers
  https://semver.org/: Семантичне версіювання
  https://jubianchi.github.io/semver-check/: Інструмент порівняння семантичних версій
---

Файл `fabric.mod.json` — це файл метаданих, який використовується Завантажувачем Fabric для завантаження модів. Його потрібно розмістити в кореневому каталозі JAR, щоб мод завантажився.

Попередньо визначений файл `fabric.mod.json` включено в шаблон мода, або його може [згенерувати Fabric Loom](../loom/tasks#fabric-mod-json).

Ви можете переглянути [початковий код особливостей для `fabric.mod.json` v1](https://github.com/FabricMC/fabric-loom/blob/-/src/main/java/net/fabricmc/loom/api/fmj/FabricModJsonV1Spec.java). Нижче ви також знайдете файл `fabric.mod.json`, який використовується в цьому сайті.

:::details `fabric.mod.json` приклада мода

<<< @/reference/26.1.2/src/main/resources/fabric.mod.json

:::

## Обов’язкові поля {#mandatory-fields}

Наступні поля є обов’язковими, щоб Fabric міг завантажити ваш мод.

- **`schemaVersion`**: має бути першим записом, а значення має бути завжди `1`. Потрібно, щоб Завантажувач Fabric правильно аналізував файл.
- **`id`**: рядкове значення, яке визначає ідентифікатор мода. Має починатися з літери. Може містити лише літери ASCII, цифри, нижні лінії, або дефіси. Від 2 до 64 символів.
- **`version`**: рядкове значення, яке визначає версію мода, очікується відповідність особливості [схематичного версіювання 2.0.0](https://semver.org/).

```json
"schemaVersion": 1,
"id": "example-mod",
"version": "1.0.0"
```

## Метадані {#metadata}

- **`name`**: рядок, який визначає зручну назву мода. Якщо його немає, усталено використовується **id**.
- **`description`**: рядок, який визначає опис мода. Якщо його немає, усталено буде порожньо.

```json
"name": "Example Mod",
"description": "This is an example description! Tell everyone what your mod is about!",
```

### Контакти {#contact}

**`contact`**: список, який визначає контактну інформацію для проєкту. Деякі загальні поля включають:

- **`email`**: рядок, що визначає контактну електронну пошту, що стосується мода. Має бути дійсна адреса електронної пошти.
- **`homepage`**: рядок, який визначає домашню сторінку проєкту або користувача. Має бути дійсна адреса HTTP/HTTPS.
- **`irc`**: рядок, який визначає канал IRC, що відноситься до мода. Повинен мати дійсний формат URL-адреси, наприклад: `irc://irc.esper.net:6667/charset` для `#charset` в EsperNet — порт є необов’язковим і вважається 6667, якщо його немає.
- **`issues`**: рядок, який визначає засіб відстеження проблем проєкту. Має бути дійсна адреса HTTP/HTTPS.
- **`sources`**: рядок, який визначає репозиторій початкового коду проєкту. Повинна бути дійсна URL-адреса, однак це може бути спеціалізована URL-адреса для наданої VCS (наприклад, Git або Mercurial).

Список не є вичерпним — моди можуть надавати додаткові нестандартні ключі, такі як **`discord`**, **`slack`**, **`twitter`**… Якщо можливо, це мають бути дійсні URL-адреси.

```json
"contact": {
    "homepage": "https://fabricmc.net",
    "sources": "https://github.com/FabricMC/fabric-example-mod"
}
```

### Автори та дописувачі {#authors-contributors}

- **`authors`**: масив авторів мода. Записи можуть бути або рядком, або об'єктом із полями, переліченими нижче.
- **`contributors`**: масив дописувачів мода. Записи можуть бути або рядком, або об'єктом із полями, переліченими нижче.

Поля:

- **`name`**: обов’язковий рядок для справжнього імені особи або імені користувача.
- **`contact`**: додатковий об’єкт для контактної інформації особи. Те саме, що [**`contact`**] (#contact) верхнього рівня.

```json
"authors": [
    "Me!",
    {
        "name": "Tiny Potato",
        "contact": {
          "homepage": "https://fabricmc.net",
          "sources": "https://github.com/FabricMC/fabric-example-mod"
        }
    }
]
```

### Ліцензія {#license}

- **`license`**: рядок або масив, що визначає інформацію про ліцензування. Щоб допомогти автоматизованим інструментам, рекомендується використовувати [SPDX License Identifiers](https://spdx.org/licenses/) для ліцензій з відкритим кодом.

Це повинно забезпечити мінімальний набір ліцензій, який задовольняє весь пакет мода. Іншими словами, хтось, хто бажає використовувати або розповсюджувати ваш мод, повинен лише відповідати переліченим тут ліцензіям.
Якщо частини вашого коду мають подвійну ліцензію, виберіть бажану ліцензію.
Цей список не обов’язково забороняє вам надавати додаткові права чи застосовувати різні ліцензії для певних людей у ​​кожному конкретному випадку.

```json
"license": "CC0-1.0"
```

### Значок {#icon}

- **`icon`**: рядок або список, що визначає значок мода. Значки — це квадратні файли PNG. Пакети ресурсів Minecraft використовують 128×128, але це не є жорсткою вимогою — проте рекомендується степінь двох. Може надаватися в одній із двох форм:
  - Шлях до одного файлу PNG.
  - Список ширини зображень до шляхів до їхніх файлів.

```json
"icon": "assets/example-mod/icon.png"
```

## Завантаження мода {#mod-loading}

### Середовище {#environment}

- **`environment`**: рядкове значення, яке визначає, в яких середовищах мод має працювати:
  - **`*`**: усюди. Усталено.
  - **`client`**: лише на стороні фізичного клієнта. Якщо встановлено, ваш мод не завантажуватиметься на виділених серверах.
  - **`server`**: лише на стороні фізичного сервера. Якщо встановлено, ваш мод не завантажуватиметься на клієнтах, включаючи гру наодинці та локальну мережу.

```json
"environment": "*"
```

### Точки входу {#entrypoints}

- **`entrypoints`**: об'єкт, який визначає основні класи, які завантажуватиме ваш мод.
  - **`main`**: масив імен класів рядків, які реалізують `ModInitializer`.
  - **`client`**: масив імен класів рядків, які реалізують `ClientModInitializer`. Ця точка входу запускається після `main` і лише на стороні фізичного клієнта.
  - **`server`**: масив імен класів рядків, які реалізують `DedicatedServerModInitializer`. Ця точка входу запускається після `main` і лише на стороні фізичного сервера.

Завантажувач Fabric надає ці три основні точки входу, але інші моди можуть надавати власні. Наприклад, Fabric API надає `fabric-datagen` для точок входу генератора даних.

Кожна точка входу може завантажувати кілька класів і навіть методи чи статичні поля. На приклад:

```json
"main": [
    "net.fabricmc.example.ExampleMod",
    "net.fabricmc.example.ExampleMod::handle"
]
```

::: tip

Якщо ви не використовуєте Java, вам слід ознайомитися з документацією мовного адаптера. Для Kotlin це в [README мови Kotlin](https://github.com/FabricMC/fabric-language-kotlin/blob/master/README.md).

:::

### JAR-и {#jars}

- **`jars`**: масив JAR, який буде вкладено у ваш мод. Якщо використовувати `include` для ваших залежностей, Loom автоматично заповнить це. Кожен запис є об’єктом, що містить ключ `file` зі шляхом до вкладеного JAR з вашого мода. На приклад:

```json
"jars": [
   {
      "file": "nested/vendor/dependency.jar"
   }
]
```

### Адаптери мови {#language-adapters}

- **`languageAdapters`**: список класів, які реалізують `LanguageAdapter`.

```json
"languageAdapters": {
   "kotlin": "net.fabricmc.language.kotlin.KotlinAdapter"
}
```

### Міксини {#mixins}

- **`mixins`**: список файлів налаштувань міксинів. Кожен запис є або шляхом до файлу налаштувань міксинів у JAR вашого мода, або об'єктом, що містить такі поля:
  - **`config`**: шлях до файлу налаштування міксинів у JAR вашого мода.
  - **`environment`**: поводиться так само, як [поле **environment** верхнього рівня](#environment). На приклад:

```json
"mixins": [
   "example-mod.mixins.json",
   {
      "config": "example-mod.client-mixins.json",
      "environment": "client"
   }
]
```

### Розширювачі доступу {#accesswideners}

- **`accessWidener`**: рядок, що ідентифікує файл [розширення доступу або твікери класу](../class-tweakers/).

```json
"accessWidener": "example-mod.classtweaker"
```

### Постачальники {#provides}

- **`provides`**： масив ID модів, які будуть псевдонімами мода. Завантажувач Fabric розглядатиме ці ID так, ніби відповідні моди існують. Якщо будь-який інший мод використовує один з них, він не буде завантажений.

```json
"provides": [
   "example_mod"
]
```

## Вирішення залежностей {#dependency-resolution}

Наступні ключі прийматимуть список залежностей. Подробиці про те, як структурувати список, див. нижче:

- **`depends`**: для залежностей, потрібних для запуску. **Якщо якась залежність відсутня, Завантажувач Fabric спричинить збій**.
- **`recommends`**: для залежностей, необов'язкових для запуску. Якщо якась залежність відсутня, Завантажувач Fabric виведе попередження до журналу.
- **`suggests`**: для залежностей, необов'язкових для запуску. Використовуйте це як свого роду метадані.
- **`breaks`**: для модів, які на вашу думку спричинять збій. **Якщо надано такий мод, Завантажувач Fabric спричинить збій**.
- **`conflicts`**: для модів, які на вашу думку спричинять помилки, тощо. Якщо надано такий мод, Завантажувач Fabric виведе попередження до журналу.

### Семантичне версіювання {#semantic-versioning}

Ключем кожного запису є ID мода залежності.

Значення кожного ключа — це рядок або масив рядків, що оголошують підтримувані діапазони версій залежності. Якщо це масив, лише один із діапазонів має відповідати, щоб обмеження було виконано.

Ось кілька прикладів діапазонів і що вони позначають. Спробуйте використати [Semver check від jubianchi](https://jubianchi.github.io/semver-check/#/), щоб перевірити, які значення задовольнять обмеження.

:::details Приклади семантичного версіювання

**Примітка:** Minecraft не дотримується семантичного версіювання. За потреби Fabric перекладе версію Minecraft на її еквівалент у семантичній версії. Приклади: `26.1`->`26.1.0`, `26.1-snapshot-1`->`26.1-alpha.1`, `26w14a`->`26.1.1-alpha.26.14.a`.

| Діапазон                       | Опис                                                         | Збіги                     | Конфлікти                 |
| ------------------------------ | ------------------------------------------------------------ | ------------------------- | ------------------------- |
| <Range r="*" />                | Будь-яка версія (не рекомендовано)        | `26.1.2`, `24w14potato`…  | _немає_                   |
| <Range r="26.1.2" />           | Тільки точна версія                                          | `26.1.2`                  | `26.1`, `26.1.1`, `26.2`… |
| <Range r="26.1.0 || 26.1.1" /> | Будь-який діапазон                                           | `26.1.0`, `26.1.1`        | `26.1.2`, `26.2`…         |
| <Range r="[26.1.0, 26.1.1]" /> | Еквівалент `26.1.0 \|\| 26.1.1`                              | `26.1`, `26.1.1`          | `26.1.2`, `26.2`…         |
| <Range r=">26" />              | Версії вище (виключно)                    | `26.1.2`, `26.2`…         | `26`, `25.x`…             |
| <Range r=">=26.1" />           | Ця або вища версія (включно)              | `26.1`, `26.1.2`, `26.2`… | `26.0`, `25.x`…           |
| <Range r="<=26.1" />           | Ця або нижча версія (включно)             | `26.1`, `26.0`, `25.x`…   | `26.1.2`, `26.2`…         |
| <Range r=">26 <26.2" />        | Між двома версіями (обидві виключено)     | `26.1`, `26.1.2`, знімки… | `26`, `26.2`…             |
| <Range r=">=26.1 <26.2" />     | Між двома версіями (включаючи нижню межу) | `26.1`, `26.1.2`, знімки… | `26.0`, `26.2`…           |
| <Range r="26.1.x" />           | Будь-який патч мінорної версії                               | `26.1`, `26.1.2`, знімки… | `26.2`, `27.x`…           |
| <Range r="~26.1" />            | Те саме, що `26.1.x`                                         | `26.1`, `26.1.2`, знімки… | `26.2`, `27.x`…           |
| <Range r="^26.1" />            | Будь-яка версія з тою самою головною версією                 | `26.1.2`, `26.2`, `26.3`… | `25.x`, `27.x`…           |

:::

```json
"depends": {
    "example-mod": "*",
    "minecraft": [
        "26.1",
        "26.1.1"
    ]
}
"suggests": {
    "another-mod": ">1.0.0"
}
```

## Власні поля {#custom-fields}

Ви можете додати будь-яке поле, яке хочете додати всередину поля `custom`. Завантажувач ігнорував би їх. Однак настійно рекомендується розміщувати поля у просторі імен, щоб уникнути конфліктів з іншими модами.
